@@ -18,13 +18,13 @@ where
 
 == List of Supported Options ==
 
-; <tt>-v</tt> / <tt>--verbose</tt> : Verbose mode
-; <tt>-b</tt> / <tt>--binarize</tt> : Binarize levelset and write as byte mask, rather than write floating-point levelset function itself.
+; <tt>--verbose</tt> / <tt>-v</tt> : Verbose mode
+; <tt>--binarize</tt> / <tt>-b</tt> : Binarize levelset and write as byte mask, rather than write floating-point levelset function itself.
 === These parameters of control the evolution of the levelset function ===
 
-; <tt>-n</tt> <tt><integer></tt> / <tt>--iterations</tt> <tt><integer></tt> : Maximum number of iterations
-; <tt>-f</tt> / <tt>--force-iterations</tt> : Force given number of iterations, even when convergence has been detected
-; <tt>-s</tt> <tt><double></tt> / <tt>--filter-sigma</tt> <tt><double></tt> : Gaussian filter sigma in world coordinate units (e.g., mm)
-; <tt>-d</tt> <tt><double></tt> / <tt>--delta</tt> <tt><double></tt> : Time constant for levelset evolution; must be > 0; larger is faster
-; <tt>-t</tt> <tt><double></tt> / <tt>--levelset-threshold</tt> <tt><double></tt> : Levelset threshold: levelset function is truncated at +/- this value
+; <tt>--iterations</tt> <tt><integer></tt> / <tt>-n</tt> <tt><integer></tt> : Maximum number of iterations
+; <tt>--force-iterations</tt> / <tt>-f</tt> : Force given number of iterations, even when convergence has been detected
+; <tt>--filter-sigma</tt> <tt><double></tt> / <tt>-s</tt> <tt><double></tt> : Gaussian filter sigma in world coordinate units (e.g., mm)
+; <tt>--delta</tt> <tt><double></tt> / <tt>-d</tt> <tt><double></tt> : Time constant for levelset evolution; must be > 0; larger is faster
+; <tt>--levelset-threshold</tt> <tt><double></tt> / <tt>-t</tt> <tt><double></tt> : Levelset threshold: levelset function is truncated at +/- this value
 
